Class 22 update: Tests