@@ -4,6 +4,9 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.when;
+
+import java.time.LocalDate;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -12,6 +15,7 @@ import org.mockito.Mockito;
 
 import comdevsenior.camorour.exception.NotFoundException;
 import comdevsenior.camorour.model.Book;
+import comdevsenior.camorour.model.Loan;
 import comdevsenior.camorour.model.LoanState;
 import comdevsenior.camorour.model.User;
 
@@ -34,7 +38,7 @@ public class LoanServiceTest {
         // GIVEN
         var id = "1234";
         var isbn = "1111";
-        var mockUser = new User(id, "Camilo", "camo321@gmail.com");
+        var mockUser = new User(id, "Duvan", "camo321@gmail.com");
         var mockBook = new Book(isbn, "The Lord of the Rings", "JRR Tolkien");
 
         Mockito.when(userService.getUserById(id)).thenReturn(mockUser);
@@ -46,7 +50,7 @@ public class LoanServiceTest {
         // THEN
         var loans = service.getLoans();
         assertEquals(1, loans.size());
-        
+
         var loan = loans.get(0);
         assertNotNull(loan.getUser());
         assertNotNull(loan.getBook());
@@ -75,86 +79,132 @@ public class LoanServiceTest {
         var loans = service.getLoans();
         assertEquals(1, loans.size());
 
-        var loan = loans.getFirst();
+        var loan = loans.get(0);
         assertEquals(id, loan.getUser().getId());
         assertEquals(isbn, loan.getBook().getIsbn());
         assertEquals(LoanState.FINISHED, loan.getState());
     }
 
-    @DisplayName("Retornar un libro inexistente")
+    @DisplayName("Préstamo con un libro ya prestado")
     @Test
-    void testReturnBookWithNonExistingLoan() throws NotFoundException {
+    void testAddLoanWithAlreadyLoanedBook() throws NotFoundException {
         // GIVEN
         var id = "1234";
         var isbn = "1111";
 
+        var mockUser = new User(id, "Duvan", "camo321@gmail.com");
+        var mockBook = new Book(isbn, "The Lord of the Rings", "JRR Tolkien");
+
+        Mockito.when(userService.getUserById(anyString())).thenReturn(mockUser);
+        Mockito.when(bookService.getBookByIsbn(anyString())).thenReturn(mockBook);
+
+        service.addLoan(id, isbn);
+
         // WHEN - THEN
-        assertThrows(NotFoundException.class, () -> {
-            service.returnBook(id, isbn);
-        });
+        assertThrows(NotFoundException.class,
+                () -> {
+                    service.addLoan(id, isbn);
+                });
     }
 
-    @DisplayName("Intentar agregar un préstamo con un usuario inexistente")
+    @DisplayName("Préstamo con usuario no existente")
     @Test
     void testAddLoanWithNonExistingUser() throws NotFoundException {
         // GIVEN
-        var id = "0192";
-        var isbn = "1321";
-        var mockBook = new Book(isbn, "El dolor de cabeza con java", "Camo Rour");
+        var id = "9999";
+        var isbn = "1111";
 
-        Mockito.when(userService.getUserById(id)).thenThrow(new NotFoundException("Usuario no encontrado"));
-        Mockito.when(bookService.getBookByIsbn(isbn)).thenReturn(mockBook);
+        Mockito.when(userService.getUserById(anyString())).thenThrow(new NotFoundException("Usuario no encontrado"));
 
         // WHEN - THEN
-        assertThrows(NotFoundException.class, () -> service.addLoan(id, isbn));
+        assertThrows(NotFoundException.class,
+                () -> {
+                    service.addLoan(id, isbn);
+                });
     }
 
-    @DisplayName("Intentar agregar un préstamo con un libro inexistente")
+    @DisplayName("Préstamo con libro no existente")
     @Test
     void testAddLoanWithNonExistingBook() throws NotFoundException {
         // GIVEN
         var id = "1234";
         var isbn = "9999";
-        var mockUser = new User(id, "Camilo", "camo321@gmail.com");
 
-        Mockito.when(userService.getUserById(id)).thenReturn(mockUser);
-        Mockito.when(bookService.getBookByIsbn(isbn)).thenThrow(new NotFoundException("Libro no encontrado."));
+        var mockUser = new User(id, "Duvan", "camo321@gmail.com");
+
+        Mockito.when(userService.getUserById(anyString())).thenReturn(mockUser);
+        Mockito.when(bookService.getBookByIsbn(anyString())).thenThrow(new NotFoundException("Libro no encontrado"));
 
         // WHEN - THEN
-        assertThrows(NotFoundException.class, () -> service.addLoan(id, isbn));
+        assertThrows(NotFoundException.class,
+                () -> {
+                    service.addLoan(id, isbn);
+                });
     }
 
-    @DisplayName("Devolver un libro correctamente")
+    // 1
+    @DisplayName("No se puede prestar un libro que ya está prestado")
     @Test
-    void testReturnBook() throws NotFoundException {
+    void testAddLoanBookAlreadyLoanedFullCondition() throws NotFoundException {
+        // GIVEN
+        var userId = "1234";
+        var isbn = "1111";
+        var loanDate = LocalDate.of(2023, 10, 1);
+
+        var user = new User(userId, "Duvan", "camo321@gmail.com");
+        var book = new Book(isbn, "The Lord of the Rings", "JRR Tolkien");
+
+        when(userService.getUserById(userId)).thenReturn(user);
+        when(bookService.getBookByIsbn(isbn)).thenReturn(book);
+
+        var existingLoan = new Loan(user, book, loanDate);
+        existingLoan.setState(LoanState.STARTED);
+        service.getLoans().add(existingLoan);
+
+        // WHEN y THEN
+        var exception = assertThrows(NotFoundException.class, () -> {
+            service.addLoan(userId, isbn);
+        });
+
+        assertEquals("El libro con el isbn: " + isbn + " se encuentra prestado", exception.getMessage());
+    }
+
+    @DisplayName("Retornar un libro inexistente")
+    @Test
+    void testReturnBookWithNonExistingLoan() {
         // GIVEN
         var id = "1234";
         var isbn = "1111";
-        var mockUser = new User(id, "Camilo", "camo321@gmail.com");
-        var mockBook = new Book(isbn, "Harry Potter", "J.K. Rowling");
-
-        Mockito.when(userService.getUserById(id)).thenReturn(mockUser);
-        Mockito.when(bookService.getBookByIsbn(isbn)).thenReturn(mockBook);
-
-        service.addLoan(id, isbn);
-
-        // WHEN
-        service.returnBook(id, isbn);
-
-        // THEN
-        var loans = service.getLoans();
-        assertEquals(1, loans.size());
-        assertEquals(LoanState.FINISHED, loans.get(0).getState());
-    }
-
-    @DisplayName("Intentar devolver un libro que no ha sido prestado")
-    @Test
-    void testReturnNonExistingLoan() {
-        // GIVEN
-        var id = "9999";
-        var isbn = "8888";
 
         // WHEN - THEN
-        assertThrows(NotFoundException.class, () -> service.returnBook(id, isbn));
+        assertThrows(NotFoundException.class,
+                () -> {
+                    service.returnBook(id, isbn);
+                });
     }
+
+    //2
+    @DisplayName("Devolver un libro prestado correctamente")
+    @Test
+    void testReturnBook() throws NotFoundException {
+        // GIVEN
+        var userId = "1234";
+        var isbn = "1111";
+        var loanDate = LocalDate.of(2023, 10, 1);
+
+        var user = new User(userId, "Duvan", "camo321@gmail.com");
+        var book = new Book(isbn, "The Lord of the Rings", "JRR Tolkien");
+
+        // Añadimos un préstamo con el usuario, libro e ID que queremos probar
+        var loan = new Loan(user, book, loanDate);
+        loan.setState(LoanState.STARTED);
+        service.getLoans().add(loan);
+
+        // WHEN
+        service.returnBook(userId, isbn);
+
+        // THEN
+        assertEquals(LoanState.FINISHED, loan.getState());
+    }
+
 }
